# gw2-pvp-helper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRODUCTION-READINESS.md  README.md  app.py  docker-compose.test.yml  docker-compose.yml  justfile  package.json  pyproject.toml  railpack.json  railway.toml  ux.md  vite.config.ts  vitest.config.ts
blog-export/: MANIFEST.md  generate-hero.mjs  generate-minimap-slider-assets.mjs  generate-visuals.mjs
data/: meta-profiles.json  output-format-dps.md  output-format-support.md  profile-generation-prompt.md  universal-game-knowledge.md  weapon-skills.json
db/: database.py
docs/: PRODUCTION-READINESS.md  implementation-prompts.md  minimap-detection-improvements.md  ux.md
drizzle/: 0000_grey_wolfsbane.sql  0001_empty_korath.sql  0002_overjoyed_randall.sql  0003_green_selene.sql  0004_goofy_zodiak.sql  0005_ancient_warhawk.sql  0007_add_is_user.sql  0007_red_logan.sql  0008_player_ratings.sql  0008_powerful_guardsmen.sql  0009_training_data_pipeline.sql  0010_match_players_cascade.sql  0011_auth_password_login.sql  0012_gw2_api_key_auth.sql
prompts/: wire-local-cv-pipeline.md
routes/: analysis_routes.py  cv_parser.py  data_routes.py  player_routes.py
scraper/: enrich.py  fetch_spec_icons.py  metabattle.py
scripts/: backup-db.sh  bootstrap-migrations.mjs  bootstrap-minimap-refs.ts  build-icon-reference.ts  fetch-gw2-api.ts  migrate.mjs  test-minimap-detection.ts
src/: app.css  app.d.ts  app.html  hooks.client.ts  hooks.server.ts
templates/: index.html
tests/: admin-api.test.ts  admin-guard.test.ts  advice-raw.test.ts  auth-enforcement.test.ts  auth.test.ts  build-decode.test.ts  byok.test.ts  data-paths.test.ts  db-connection.test.ts  debug-viewer.test.ts  hardening.test.ts  test_data.py  (+15 more)
(+140 files in other folders)
