[project]
name = "gw2-pvp-helper"
version = "0.1.0"
description = "GW2 PvP Match Companion for S/D Daredevil Thief"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["routes", "db", "scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
